--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1409,6 +1409,13 @@
 % \setcitestyle{numbers,sort&compress}
 % \end{verbatim}
 %
+% One of the more common versions is
+% \begin{verbatim}
+% \setcitestyle{nosort}
+% \end{verbatim}
+% It is useful if you do not like the way |natbib| sorts citation
+% lists.  
+%
 % If you use |natbib|, then commands like \cs{citep} and
 % \cs{citeauthor} are automatically supported.  The command
 % \cs{shortcite} is the same as \cs{cite} in numerical mode and cites
