Change in iw3c2w3[g] copyright statements

--- a/README
+++ b/README
@@ -174,3 +174,5 @@ Version 1.48    Bug fixes
 		Added support for IW3C2 conferences
 
 Version 1.49    New jorunal:  DTRAP
+
+Version 1.50    Changes in iw3c2w3 and iw3c2w3g copyright statements.
