--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1671,7 +1671,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/01/24 v1.49 Typesetting articles for the Association for
+[2018/02/07 v1.50 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -4318,6 +4318,7 @@ Computing Machinery]
 %
 % \begin{macro}{\@copyrightpermission}
 % \changes{v1.40}{2017/06/16}{Added new copyright version: licensedcagov}
+% \changes{v1.50}{2018/02/07}{New copyright statements for iw3c2w3[g]}
 %   The canned permission block.
 %    \begin{macrocode}
 \def\@copyrightpermission{%
@@ -4435,21 +4436,13 @@ Computing Machinery]
    This paper is published under the Creative Commons Attribution~4.0
    International (CC~BY~4.0) license. Authors reserve their rights to
    disseminate the work on their personal and corporate Web sites with
-   the appropriate attribution. In case of republication, reuse, etc.,
-   the following attribution should be used: ``Published in
-   WWW\@acmYear{} Proceedings \textcopyright{} \@copyrightyear{}
-   International World Wide Web Conference Committee, published under
-   Creative Commons~CC~BY~4.0  License.'' 
+   the appropriate attribution. 
  \or % iw3c2w3g
    This paper is published under the Creative Commons
    Attribution-NonCommercial-NoDerivs~4.0 International
    (CC~BY-NC-ND~4.0) license. Authors reserve their rights to
    disseminate the work on their personal and corporate Web sites with
-   the appropriate attribution. In case of republication, reuse, etc.,
-   the following attribution should be used: ``Published in
-   WWW\@acmYear{} Proceedings \textcopyright{} \@copyrightyear
-   International World Wide Web Conference Committee, published under
-   Creative Commons CC~BY-NC-ND~4.0 License.''   
+   the appropriate attribution. 
  \fi}
 %    \end{macrocode}
 %
