Abbreviated journal names in footers

--- a/README
+++ b/README
@@ -175,4 +175,6 @@ Version 1.48    Bug fixes
 
 Version 1.49    New jorunal:  DTRAP
 
-Version 1.50    Changes in iw3c2w3 and iw3c2w3g copyright statements.
+Version 1.50    Changes in iw3c2w3 and iw3c2w3g
+
+Version 1.51    Journal footers now use abbreviated journal titles.
