Reworded copyright statements

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -999,7 +999,7 @@
 %     \texttt{acmcopyright} & The authors transfer the copyright to the
 %     ACM (the ``traditional'' choice).\\
 %     \texttt{acmlicensed} & The authors retain the copyright but
-%     license the publication rights to the ACM\@. \\
+%     license the publication rights to ACM\@. \\
 %     \texttt{rightsretained} & The authors retain the copyright and
 %     publication rights to themselves or somebody else. \\
 %     \texttt{usgov} & All the authors are employees of the US
@@ -1011,17 +1011,17 @@
 %     \texttt{cagovmixed} & Some authors are employees of the Canadian
 %     government. \\
 %     \texttt{licensedusgovmixed} & Some authors are employees of the US
-%     government, and the publication rights are licensed to the ACM\@. \\
+%     government, and the publication rights are licensed to ACM\@. \\
 %     \texttt{licensedcagov} & All the authors are employees of the Canadian
-%     government, and the publication rights are licensed to the ACM\@. \\
+%     government, and the publication rights are licensed to ACM\@. \\
 %     \texttt{licensedcagovmixed} & Some authors are employees of the
 %     Canadian
-%     government, and the publication rights are licensed to the ACM\@. \\
+%     government, and the publication rights are licensed to ACM\@. \\
 %     \texttt{othergov} & Authors are employees of a
 %     government other than the US or Canada. \\
 %     \texttt{licensedothergov} & Authors are employees of a
 %     government other than the US or Canada, and the publication rights
-%                                   are licensed to the ACM\@. \\
+%                                   are licensed to ACM\@. \\
 %     \texttt{iw3c2w3} & Special statement for conferences organized
 %     by IW3C2.\\
 %     \texttt{iw3c2w3g} & Special statement for conferences organized
@@ -4284,7 +4284,7 @@ Computing Machinery]
   Association for Computing Machinery.
   \or % acmlicensed
   Copyright held by the owner/author(s). Publication rights licensed to
-  the Association for Computing Machinery.
+  ACM\@.
   \or % rightsretained
   Copyright held by the owner/author(s).
   \or % usgov
@@ -4296,18 +4296,18 @@ Computing Machinery]
   Association for Computing Machinery.
   \or %licensedusgovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  the Association for Computing Machinery.
+  ACM\@.
   \or % licensedcagov
   Crown in Right of Canada. Publication rights licensed to
-  the Association for Computing Machinery.
+  ACM\@.
   \or %licensedcagovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  the Association for Computing Machinery.
+  ACM\@.
   \or % othergov
   Association for Computing Machinery.
   \or % licensedothergov
   Copyright held by the owner/author(s). Publication rights licensed to
-  the Association for Computing Machinery.
+  ACM\@.
   \or % ic2w3www
   IW3C2 (International World Wide Web Conference Committee), published
   under Creative Commons CC~BY~4.0 License.
