--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1672,7 +1672,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/04/05 v1.51 Typesetting articles for the Association for
+[2018/04/09 v1.51a Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -4275,7 +4275,9 @@ Computing Machinery]
 %
 %
 % \begin{macro}{\@copyrightowner}
-% \changes{v1.40}{2017/06/16}{Added new copyright version: licensedcagov}
+% \changes{v1.40}{2017/06/16}{Added new copyright version:
+% licensedcagov}
+% \changes{v1.52}{2018/04/09}{Rewording of licenses}
 %   Here is the owner of the copyright
 %    \begin{macrocode}
 \def\@copyrightowner{%
@@ -4310,10 +4312,10 @@ Computing Machinery]
   ACM\@.
   \or % ic2w3www
   IW3C2 (International World Wide Web Conference Committee), published
-  under Creative Commons CC~BY~4.0 License.
+  under Creative Commons CC-BY~4.0 License.
   \or % ic2w3wwwgoogle
   IW3C2 (International World Wide Web Conference Committee), published
-  under Creative Commons CC~BY-NC-ND~4.0 License.
+  under Creative Commons CC-BY-NC-ND~4.0 License.
   \fi}
 %    \end{macrocode}
 %
@@ -4332,6 +4334,8 @@ Computing Machinery]
 % \begin{macro}{\@copyrightpermission}
 % \changes{v1.40}{2017/06/16}{Added new copyright version: licensedcagov}
 % \changes{v1.50}{2018/02/07}{New copyright statements for iw3c2w3[g]}
+% \changes{v1.52}{2018/04/09}{Another rewording of copyright
+% statements for iw3c2w3[g]} 
 %   The canned permission block.
 %    \begin{macrocode}
 \def\@copyrightpermission{%
@@ -4447,13 +4451,13 @@ Computing Machinery]
    only.
  \or % iw3c2w3
    This paper is published under the Creative Commons Attribution~4.0
-   International (CC~BY~4.0) license. Authors reserve their rights to
+   International (CC-BY~4.0) license. Authors reserve their rights to
    disseminate the work on their personal and corporate Web sites with
    the appropriate attribution. 
  \or % iw3c2w3g
    This paper is published under the Creative Commons
    Attribution-NonCommercial-NoDerivs~4.0 International
-   (CC~BY-NC-ND~4.0) license. Authors reserve their rights to
+   (CC-BY-NC-ND~4.0) license. Authors reserve their rights to
    disseminate the work on their personal and corporate Web sites with
    the appropriate attribution. 
  \fi}
