Jumped version number

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1672,7 +1672,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/04/09 v1.51a Typesetting articles for the Association for
+[2018/04/09 v1.52 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
