New journals: PACMCGIT, TIOT, TDSCI.  Rearranged table of journals, since it no longer fits on one page

--- a/README
+++ b/README
@@ -184,3 +184,5 @@ Version 1.51    Journal footers now use abbreviated journal titles.
 		Slightly reworded copyright statements.
 
 Version 1.52    Another rewording of licenses
+
+Version 1.53    New journals: PACMCGIT, TIOT, TDSCI
