--- a/acmart.dtx
+++ b/acmart.dtx
@@ -279,8 +279,10 @@
 %   manuscript & A manuscript. This is the default. \\
 %   acmsmall & Small single-column format.  Used for CIE, CSUR, DTRAP,
 %            JACM, JDIQ, JEA, JERIC,
-%            JETC, PACMHCI, PACMPL, TAAS, TACCESS, TACO, TALG, TALLIP (formerly TALIP), TCPS,
-%            TEAC, TECS, THRI, TIIS, TISSEC, TIST, TKDD, TMIS, TOCE, TOCHI, TOCL,
+%            JETC, PACMCGIT, PACMHCI, PACMPL, TAAS, TACCESS, TACO,
+%            TALG, TALLIP (formerly TALIP), TCPS, TDSCI,
+%            TEAC, TECS, THRI, TIIS, TIOT, TISSEC, TIST, TKDD, TMIS,
+%            TOCE, TOCHI, TOCL, 
 %            TOCS, TOCT, TODAES, TODS, TOIS, TOIT, TOMACS, TOMM (formerly
 %            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPS,
 %            TOS, TOSEM, TOSN, TRETS,
@@ -400,75 +402,6 @@
 % Table~\ref{tab:pubs}.  Note that conference proceedings published in
 % \emph{book} form do not set this macro.
 %
-% \begin{table}
-%   \centering
-%   \caption{ACM publications and arguments of the \cs{acmJournal}
-%   command}\footnotesize
-%   \label{tab:pubs}
-%   \begin{tabularx}{\textwidth}{>{\ttfamily}lX}
-%     \toprule
-%     \normalfont Abbreviation & Publication \\
-%     \midrule
-%     CIE & ACM Computers in Entertainment \\
-%     CSUR & ACM Computing Surveys\\
-%     DTRAP &  Digital Threats: Research and Practice\\  
-%     IMWUT & PACM on Interactive, Mobile, Wearable and Ubiquitous
-%     Technologies\\
-%     JACM &  Journal of the ACM \\
-%     JDIQ & ACM Journal of Data and Information Quality \\
-%     JEA & ACM Journal of Experimental Algorithmics \\
-%     JERIC & ACM Journal of Educational Resources in Computing\\
-%     JETC & ACM Journal on Emerging Technologies in Computing Systems \\
-%     JOCCH & ACM Journal on Computing and Cultural Heritage \\
-%     PACMHCI & PACM on Human-Computer Interaction\\
-%     PACMPL & PACM on Programming Languages \\
-%     POMACS & PACM on Measurement and Analysis of Computing Systems \\
-%     TAAS & ACM Transactions on Autonomous and Adaptive Systems\\
-%     TACCESS & ACM Transactions on Accessible Computing\\
-%     TACO & ACM Transactions on Architecture and Code Optimization \\
-%     TALG & ACM Transactions on Algorithms \\
-%     TALLIP & ACM Transactions on Asian and Low-Resource Language
-%     Information Processing\\
-%     TAP & ACM Transactions on Applied Perception \\
-%     TCPS & ACM Transactions on Cyber-Physical Systems\\
-%     TEAC & ACM Transactions on Economics and Computation\\
-%     TECS & ACM Transactions on Embedded Computing Systems \\
-%     THRI & ACM Transactions on Human-Robot Interaction\\
-%     TIIS & ACM Transactions on Interactive Intelligent Systems\\
-%     TISSEC & ACM Transactions on Information and System Security\\
-%     TIST & ACM Transactions on Intelligent Systems and Technology \\
-%     TKDD & ACM Transactions on Knowledge Discovery from Data\\
-%     TMIS & ACM Transactions on Management Information Systems\\
-%     TOCE & ACM Transactions on Computing Education\\
-%     TOCHI & ACM Transactions on Computer-Human Interaction\\
-%     TOCL & ACM Transactions on Computational Logic\\
-%     TOCS & ACM Transactions on Computer Systems \\
-%     TOCT & ACM Transactions on Computation Theory \\
-%     TODAES & ACM Transactions on Design Automation of Electronic Systems\\
-%     TODS & ACM Transactions on Database Systems\\
-%     TOG & ACM Transactions on Graphics\\
-%     TOIS & ACM Transactions on Information Systems\\
-%     TOIT & ACM Transactions on Internet Technology\\
-%     TOMACS & ACM Transactions on Modeling and Computer Simulation \\
-%     TOMM  & ACM Transactions on Multimedia Computing, Communications
-%     and Applications \\
-%     TOMPECS & ACM Transactions on Modeling and Performance Evaluation
-%     of Computing Systems\\
-%     TOMS & ACM Transactions on Mathematical Software\\
-%     TOPC & ACM Transactions on Parallel Computing\\
-%     TOPLAS & ACM Transactions on Programming Languages and Systems\\
-%     TOPS & ACM Transactions on Privacy and Security\\
-%     TOS & ACM Transactions on Storage\\
-%     TOSEM & ACM Transactions on Software Engineering and Methodology\\
-%     TOSN & ACM Transactions on Sensor Networks\\
-%     TRETS & ACM Transactions on Reconfigurable Technology and Systems\\
-%     TSAS & ACM Transactions on Spatial Algorithms and Systems\\
-%     TSC & ACM Transactions on Social Computing\\
-%     TSLP & ACM Transactions on Speech and Language Processing \\
-%     TWEB & ACM Transactions on the Web\\
-%   \bottomrule
-%   \end{tabularx}
-% \end{table}
 %
 % It is expected that this command is inserted by the author of the
 % manuscript when she decides to which journal to submit the
@@ -1649,6 +1582,91 @@
 % \emph{do not ask for support.}  If you decide to use this hook, you
 % are on your own.
 %
+%
+%\subsection{Currently supported publications}
+%\label{sec:pubs}
+%
+%\bgroup\centering
+% \begin{longtable}{>{\ttfamily}p{0.2\textwidth}@{}p{0.8\textwidth}}
+%   \caption{ACM publications and arguments of the \cs{acmJournal}
+%   command}
+%   \label{tab:pubs}\\
+%     \toprule
+%     \normalfont Abbreviation & Publication \\
+%     \midrule
+% \endfirsthead
+%   \caption[]{ACM publications and arguments of the \cs{acmJournal}
+%   command (continued)}\\
+%     \toprule
+%     \normalfont Abbreviation & Publication \\
+%     \midrule
+% \endhead
+% \bottomrule
+% \endfoot
+%     CIE & ACM Computers in Entertainment \\
+%     CSUR & ACM Computing Surveys\\
+%     DTRAP &  Digital Threats: Research and Practice\\  
+%     IMWUT & PACM on Interactive, Mobile, Wearable and Ubiquitous
+%     Technologies\\
+%     JACM &  Journal of the ACM \\
+%     JDIQ & ACM Journal of Data and Information Quality \\
+%     JEA & ACM Journal of Experimental Algorithmics \\
+%     JERIC & ACM Journal of Educational Resources in Computing\\
+%     JETC & ACM Journal on Emerging Technologies in Computing Systems \\
+%     JOCCH & ACM Journal on Computing and Cultural Heritage \\
+%     PACMCGIT & Proceedings of the ACM on Computer Graphics and
+%     Interactive Techniques\\ 
+%     PACMHCI & PACM on Human-Computer Interaction\\
+%     PACMPL & PACM on Programming Languages \\
+%     POMACS & PACM on Measurement and Analysis of Computing Systems \\
+%     TAAS & ACM Transactions on Autonomous and Adaptive Systems\\
+%     TACCESS & ACM Transactions on Accessible Computing\\
+%     TACO & ACM Transactions on Architecture and Code Optimization \\
+%     TALG & ACM Transactions on Algorithms \\
+%     TALLIP & ACM Transactions on Asian and Low-Resource Language
+%     Information Processing\\
+%     TAP & ACM Transactions on Applied Perception \\
+%     TCPS & ACM Transactions on Cyber-Physical Systems\\
+%     TDSCI & ACM Transactions on Data Science\\
+%     TEAC & ACM Transactions on Economics and Computation\\
+%     TECS & ACM Transactions on Embedded Computing Systems \\
+%     THRI & ACM Transactions on Human-Robot Interaction\\
+%     TIIS & ACM Transactions on Interactive Intelligent Systems\\
+%     TIOT & ACM Transactions on Internet of Things \\
+%     TISSEC & ACM Transactions on Information and System Security\\
+%     TIST & ACM Transactions on Intelligent Systems and Technology \\
+%     TKDD & ACM Transactions on Knowledge Discovery from Data\\
+%     TMIS & ACM Transactions on Management Information Systems\\
+%     TOCE & ACM Transactions on Computing Education\\
+%     TOCHI & ACM Transactions on Computer-Human Interaction\\
+%     TOCL & ACM Transactions on Computational Logic\\
+%     TOCS & ACM Transactions on Computer Systems \\
+%     TOCT & ACM Transactions on Computation Theory \\
+%     TODAES & ACM Transactions on Design Automation of Electronic Systems\\
+%     TODS & ACM Transactions on Database Systems\\
+%     TOG & ACM Transactions on Graphics\\
+%     TOIS & ACM Transactions on Information Systems\\
+%     TOIT & ACM Transactions on Internet Technology\\
+%     TOMACS & ACM Transactions on Modeling and Computer Simulation \\
+%     TOMM  & ACM Transactions on Multimedia Computing, Communications
+%     and Applications \\
+%     TOMPECS & ACM Transactions on Modeling and Performance Evaluation
+%     of Computing Systems\\
+%     TOMS & ACM Transactions on Mathematical Software\\
+%     TOPC & ACM Transactions on Parallel Computing\\
+%     TOPLAS & ACM Transactions on Programming Languages and Systems\\
+%     TOPS & ACM Transactions on Privacy and Security\\
+%     TOS & ACM Transactions on Storage\\
+%     TOSEM & ACM Transactions on Software Engineering and Methodology\\
+%     TOSN & ACM Transactions on Sensor Networks\\
+%     TRETS & ACM Transactions on Reconfigurable Technology and Systems\\
+%     TSAS & ACM Transactions on Spatial Algorithms and Systems\\
+%     TSC & ACM Transactions on Social Computing\\
+%     TSLP & ACM Transactions on Speech and Language Processing \\
+%     TWEB & ACM Transactions on the Web\\
+% \end{longtable}
+%\egroup
+%
 % \StopEventually{
 % \clearpage
 % \bibliography{acmart}
@@ -1672,7 +1690,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/04/09 v1.52 Typesetting articles for the Association for
+[2018/04/14 v1.53 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1752,12 +1770,14 @@ Computing Machinery]
 % \changes{1.48}{2017/10/14}{Bib code cleanup (Zack Weinberg)}
 % \changes{1.48}{2017/12/03}{Documentation update (siggraph)}
 % \changes{1.49}{2018/01/24}{New journal:  DTRAP}
+% \changes{1.53}{2018/04/14}{New journals: PACMCGIT, TIOT, TDSCI}
+% \changes{1.53}{2018/04/14}{Rearranged docs}
 %
 % And the driver code:
 %    \begin{macrocode}
 %<*gobble>
 \documentclass{ltxdoc}
-\usepackage{array,booktabs,amsmath,graphicx,fancyvrb,tabularx}
+\usepackage{array,booktabs,amsmath,graphicx,fancyvrb,tabularx, longtable}
 \usepackage[tt=false, type1=true]{libertine}
 \usepackage[varqu]{zi4}
 \usepackage[libertine]{newtxmath}
@@ -3118,6 +3138,7 @@ Computing Machinery]
 % \changes{v1.30}{2017/02/15}{Updated IMWUT and PACMPL}
 % \changes{v1.36}{2017/05/13}{Added PACMHCI journal options}
 % \changes{v1.46}{2017/08/25}{PACM now set screen to true}
+% \changes{v1.53}{2018/04/14}{Added PACMCGIT, TIOT, TDSCI}
 %
 % We use the |xkeyval| interface to define journal titles and the relevant
 % information
@@ -3133,6 +3154,7 @@ Computing Machinery]
   JERIC,%
   JETC,%
   JOCCH,%
+  PACMCGIT,%
   PACMHCI,%
   PACMPL,%
   POMACS,%
@@ -3143,10 +3165,12 @@ Computing Machinery]
   TALLIP,%
   TAP,%
   TCPS,%
+  TDSCI,%
   TEAC,%
   TECS,%
   THRI,%
   TIIS,%
+  TIOT,%
   TISSEC,%
   TIST,%
   TKDD,%
@@ -3220,6 +3244,12 @@ Computing Machinery]
 \or % JOCCH
   \def\@journalName{ACM Journal on Computing and Cultural Heritage}%
   \def\@journalNameShort{ACM J. Comput. Cult. Herit.}%
+\or % PACMCGIT
+  \def\@journalName{Proceedings of the ACM on Computer Graphics and Interactive Techniques}%
+  \def\@journalNameShort{Proc. ACM Comput. Graph. Interact. Tech.}%
+  \def\@permissionCodeOne{2577-6193}%
+  \@ACM@screentrue
+  \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
 \or % PACMHCI
   \def\@journalName{Proceedings of the ACM on Human-Computer Interaction}%
   \def\@journalNameShort{Proc. ACM Hum.-Comput. Interact.}%
@@ -3261,6 +3291,10 @@ Computing Machinery]
   \def\@journalName{ACM Transactions on Applied Perception}%
 \or % TCPS
   \def\@journalName{ACM Transactions on Cyber-Physical Systems}%
+\or % TDSCI
+  \def\@journalName{ACM Transactions on Data Science}%
+  \def\@journalNameShort{ACM Trans. Data Sci.}%
+  \def\@permissionCodeOne{2577-3224}%
 \or % TEAC
   \def\@journalName{ACM Transactions on Economics and Computation}%
 \or % TECS
@@ -3275,6 +3309,10 @@ Computing Machinery]
   \def\@journalName{ACM Transactions on Interactive Intelligent Systems}%
   \def\@journalNameShort{ACM Trans. Interact. Intell. Syst.}%
   \def\@permissionCodeOne{2160-6455}%
+\or % TIOT
+  \def\@journalName{ACM Transactions on Internet of Things}%
+  \def\@journalNameShort{ACM Trans. Internet Things}%
+  \def\@permissionCodeOne{2577-6207}%
 \or % TISSEC
   \def\@journalName{ACM Transactions on Information and System Security}%
   \def\@journalNameShort{ACM Trans. Info. Syst. Sec.}%
