--- a/acmart.dtx
+++ b/acmart.dtx
@@ -123,6 +123,7 @@
 %  Craig Rodkin,
 %  Bernard Rous,
 %  David Shamma,
+%  Gabriel Scherer,
 %  Stephen Spencer,
 %  Daniel Thomas,
 %  Zack Weinberg,
@@ -1693,7 +1694,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/04/14 v1.53 Typesetting articles for the Association for
+[2018/05/27 v1.54 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
