Deleted indent for subsubsection, closes #276

--- a/README
+++ b/README
@@ -188,3 +188,4 @@ Version 1.52    Another rewording of licenses
 Version 1.53    New journals: PACMCGIT, TIOT, TDSCI
 
 Version 1.54    New option: 'noacm' (Gabriel Scherer)
+		Deleted indent for subsubsection (suggested by Ross Moore)
