--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1469,8 +1469,7 @@
 % part: should Ludwig van Beethoven be sorted under ``V'' or under
 % ``B''?  The American practice is to use ``van'' in sorting, i.e. to
 % file van Beethoven under ``V''.  However, some authorities recommend
-% to sort Belgian persons according to their last names, so if van
-% Beethoven were Belgian, he should be sorted under ``B'' (see
+% to sort Dutch persons according to their last names (see
 % e.g. \url{https://www.ifla.org/files/assets/cataloguing/pubs/names-of-persons_1996.pdf}).
 % While I do not want to take a part in this dispute, I would like to
 % point to the old ``noopsort'' trick by Oren Patashnik.  Add to the
