--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -31,6 +31,9 @@
 %\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 %\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 
+% Submission ID
+\acmSubmissionID{123-A56-BU3}
+
 
 \begin{document}
 \title{SIG Proceedings Paper in LaTeX Format}
@@ -114,6 +117,7 @@
 
 % The default list of authors is too long for headers.
 \renewcommand{\shortauthors}{B. Trovato et al.}
+
 
 
 \begin{abstract}
