--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1713,7 +1713,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/07/16 v1.54 Typesetting articles for the Association for
+[2018/07/25 v1.55 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -5574,19 +5574,21 @@ Computing Machinery]
 % `page' instead of `pages'}
 % \changes{v1.46}{2017/08/25}{Added subtitle}
 % \changes{v1.54}{2018/06/10}{Bug corrected (Ross Moore)}
+% \changes{v1.55}{2018/07/25}{Bug corrected}
 %   Print the |bibcitation| format
 %    \begin{macrocode}
 \def\@mkbibcitation{\bgroup
   \def\@pages@word{\ifnum\getrefnumber{TotPages}=1\relax page\else pages\fi}%
   \def\footnotemark{}%
-  \def\\{\unskip{}, \ignorespaces}%
+  \def\\{\unskip{} \ignorespaces}%
   \def\footnote{\ClassError{\@classname}{Please do not use footnotes
       inside a \string\title{} or \string\author{} command! Use
       \string\titlenote{} or \string\authornote{} instead!}}%
   \def\@article@string{\ifx\@acmArticle\@empty{\ }\else,
     Article~\@acmArticle\ \fi}%
   \par\medskip\small\noindent{\bfseries ACM Reference Format:}\par\nobreak
-  \noindent\authors. \@acmYear. \@title
+  \noindent\bgroup
+    \def\\{\unskip{}, \ignorespaces}\authors\egroup. \@acmYear. \@title
   \ifx\@subtitle\@empty. \else: \@subtitle. \fi
   \if@ACM@nonacm\else
     % The 'nonacm' option disables 'printacmref' by default,
