--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1823,7 +1823,7 @@ Computing Machinery]
 %
 %
 %\subsection{Preload hook}
-`%\label{sec:preload}
+%\label{sec:preload}
 %
 % We preload |acmart-preload-hook|:
 %    \begin{macrocode}
