[sigchi] Normalize table and figure captions

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2958,8 +2958,12 @@ Computing Machinery]
   \or % sigchi
     \captionsetup[figure]{labelfont={bf, small},
       textfont={bf, small}}
+    \captionsetup[table]{labelfont={bf, small},
+      textfont={bf, small}}
   \or % sigchi-a
     \captionsetup[figure]{labelfont={bf, small},
+      textfont={bf, small}}
+    \captionsetup[table]{labelfont={bf, small},
       textfont={bf, small}}
   \fi
 \fi
