--- a/acmart.dtx
+++ b/acmart.dtx
@@ -5558,7 +5558,7 @@ Computing Machinery]
     \if@ACM@journal
        \everypar{\setbox\z@\lastbox\everypar{}}\small
     \else
-      \section*{Abstract}%
+      \section*{\abstractname}%
     \fi
    \ignorespaces\@abstract\par}%
   \fi\egroup}
