Doc changes.  Close #316

--- a/README
+++ b/README
@@ -197,4 +197,6 @@ Version 1.54    New option: 'noacm' (Gabriel Scherer)
                 Bug fixes
 
 Version 1.55    Bug fixes
+		Font changes for SIGCHI table captions
+		
 
