Update pdflang with RFC 3066 identifier, as per the hyperref manual.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2580,7 +2580,7 @@ Computing Machinery]
     \else
     \hypersetup{hidelinks}
   \fi
-  \hypersetup{pdflang={English},
+  \hypersetup{pdflang={en},
     pdfdisplaydoctitle}}
 %    \end{macrocode}
 %
